<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlideViewer</string>
    <string name="menu_search">Search</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_share">Share this app</string>
    <string name="menu_show_by_browser">Show by browser</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_signup">Sign up / Sign in</string>
    <string name="menu_signout">Sign out</string>
    <string name="about_git_hub">View on GitHub</string>
    <string name="about_other_app">View other Android app</string>
    <string name="about_license">License</string>

    <string name="slide_list_author" translatable="false">by %s</string>

    <string name="slide_list_empty_message">Browsing history is empty.\n\nOpen Speaker Deck site in browser, show slide page, back to this app by "Share page" menu.</string>
    <string name="slide_list_title">History</string>

    <string name="slide_reload">Loading image failed.\n\nRELOAD</string>

    <string name="about_version" translatable="false">version: %s</string>

    <string name="recognizing">Recognizing...</string>

    <string name="prev">prev</string>
    <string name="next">next</string>

    <!-- settings -->
    <string name="setting_enable_ocr">Enable OCR</string>
    <string name="setting_select_language">Select language</string>
    <string name="setting_error_before_download">Please select and download language first.</string>

    <!-- RowSelectOcrLanguageView -->
    <string name="select_ocr_language_not_downloaded">Not downloaded</string>
    <string name="select_ocr_language_downloading">Downloading</string>
    <string name="select_ocr_language_downloaded">Downloaded</string>
</resources>
