<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <!-- Options -->
    <item
        android:id="@+id/overflow_options"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_menu"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menu_share"
                android:title="@string/menu_share"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_about"
                app:showAsAction="never" />

            <item
                android:id="@+id/sign_up"
                android:title="Sign up / Sign in"
                app:showAsAction="never" />

            <item
                android:id="@+id/sign_out"
                android:title="Sign out"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
