<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#333333"
              tools:context="hm.orz.chaos114.android.slideviewer.ui.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/about_git_hub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:padding="6dp"
        android:layout_marginTop="30dp"
        android:text="@string/about_git_hub"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/about_other_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:padding="6dp"
        android:layout_marginTop="12dp"
        android:text="@string/about_other_app"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/about_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:padding="6dp"
        android:layout_marginTop="12dp"
        android:text="@string/about_license"
        android:textColor="@android:color/white"/>
</LinearLayout>
